# Perlin-Color

./: .gitignore  CMakeLists.txt  color_palettes.json  color_palettes.txt  colormap.c  colormap.h  load_palettes.c  load_palettes.h  main.c  noise.c  noise.h  readme.md  screentools.c  screentools.h  sdnoise1234.c  sdnoise1234.h
